Fixed quote alignment

--- a/style.css
+++ b/style.css
@@ -146,12 +146,15 @@ a{
 
 .quote .main{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   font-size: 36px;
   font-style: italic;
   color: #1F2937;
   padding-top: 180px;
+}
+
+.quote .wrapper{
+  width: 800px;
 }
 
 .quote .attr{
@@ -160,6 +163,7 @@ a{
   font-size: 24px;
   font-weight: 700;
   padding-bottom: 180px;
+  padding-top: 20px;
 }
 
 .call{
